# graphrl-sec

./: .env.example  .gitignore  Makefile  Project_4_GraphRL_Sec.docx  SETUP.md  chatmemory.md  docker-compose.yml  imp.text  requirements.txt
.claude/: settings.local.json
docs/: 01_project_requirements.md  02_system_architecture.md  03_environment_setup.md  04_module_data_ingestion.md  05_module_graph_construction.md  06_module_neo4j_kafka_integration.md  07_phase1_progress_report.md  08_module_self_supervised_pretraining.md  09_module_node2vec_baseline.md  10_phase2_progress_report.md  11_module_thetgat_detection.md  12_module_baselines_benchmarking.md  13_phase3_progress_report.md  14_module_soc_environment.md  15_module_drl_triage_agent.md  16_phase4_progress_report.md  17_module_federated_learning.md  18_module_campaign_detection.md  19_phase5_progress_report.md  20_module_fastapi_backend.md  21_module_nextjs_dashboard.md  22_module_integration_testing.md  23_final_progress_report.md  24_development_workflow.md  PROJECT_EXPLAINED_ENGLISH.md  PROJECT_EXPLAINED_HINGLISH.md  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useAlerts.ts  useGraphStats.ts  useGraphStream.ts  useNeighborhood.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts  graph.ts
infra/docker/postgres/: init.sql
infra/monitoring/: prometheus.yml
models/baseline/: baseline_results.json
scripts/: __init__.py  download_datasets.py  neo4j_import.py  setup_kafka.py  setup_neo4j.py
src/api/: dependencies.py  main.py  run.py
src/api/routes/: alerts.py  graph.py  stats.py
src/graph/: config.py  edge_constructor.py  feature_engineering.py  neo4j_queries.py  neo4j_schema.py  neo4j_writer.py  node_registry.py  pyg_converter.py  stats.py  temporal.py
src/ingestion/: batch.py  cli.py  config.py  consumer.py  normalizer.py  producer.py  schemas.py  topics.py
src/ingestion/parsers/: __init__.py  base.py  cicids.py  lanl.py  unsw.py
src/models/: baseline_runner.py
src/models/pretrain/: augmentation.py  baseline.py  checkpoint.py  config.py  contrastive.py  encoder.py  evaluate.py  node2vec.py  node2vec_config.py  profiling.py  trainer.py
src/models/thetgat/: config.py  evaluate.py  hetgat_layer.py  losses.py  model.py  runner.py  temporal_encoder.py  trainer.py
tests/fixtures/: sample_cicids.csv  sample_unsw.csv
tests/integration/: test_phase1.py
tests/unit/test_graph/: test_edge_constructor.py  test_feature_engineering.py  test_neo4j_queries.py  test_neo4j_schema.py  test_node_registry.py  test_pyg_converter.py  test_temporal.py
tests/unit/test_ingestion/: test_batch.py  test_cicids_parser.py  (+5 more)
(+18 files in other folders)
